--- a/templates/courses/create.html.twig
+++ b/templates/courses/create.html.twig
@@ -22,7 +22,13 @@
                     <div class="create-course-step-input">{{ form_row(form.name) }}</div>
 
                     <div class="create-course-button-section">
-                        <button type="button"  data-action="form-stepper#next">Next</button>
+                        <div>
+                        </div>
+                        <button class="btn-default"
+                                type="button"  
+                                data-action="form-stepper#next">
+                            Next
+                        </button>
                     </div>
                 </div>
             </div>
@@ -37,8 +43,16 @@
                     <div class="create-course-step-input">{{ form_row(form.Description) }}</div>
 
                     <div class="create-course-button-section">
-                        <button type="button"  data-action="form-stepper#previous">Previous</button>
-                        <button type="button"  data-action="form-stepper#next">Next</button>
+                        <button class="btn-default"
+                                type="button" 
+                                data-action="form-stepper#previous">
+                            Previous
+                        </button>
+                         <button class="btn-default"
+                                type="button"  
+                                data-action="form-stepper#next">
+                            Next
+                        </button>
                     </div>
                 </div>
             </div>
@@ -53,8 +67,16 @@
                     <div class="create-course-step-input">{{ form_row(form.categories) }}</div>
 
                     <div class="create-course-button-section">
-                        <button type="button"  data-action="form-stepper#previous">Previous</button>
-                        <button type="button"  data-action="form-stepper#next">Next</button>
+                        <button class="btn-default"
+                                type="button" 
+                                data-action="form-stepper#previous">
+                            Previous
+                        </button>
+                         <button class="btn-default"
+                                type="button"  
+                                data-action="form-stepper#next">
+                            Next
+                        </button>
                     </div>
                 </div>
             </div>
@@ -69,8 +91,16 @@
                     </div>
                     <div class="create-course-step-input"></div>
                     <div class="create-course-button-section">
-                        <button type="button" data-action="form-stepper#previous">Previous</button>
-                        <button type="submit" class="">Submit</button>
+                        <button class="btn-default"
+                                type="button" 
+                                data-action="form-stepper#previous">
+                            Previous
+                        </button>
+                         <button class="btn-default"
+                                type="submit"  
+                                data-action="form-stepper#next">
+                            Submit
+                        </button>
                     </div>
                     
                 </div>
