--- a/templates/user_courses_panel/instructor.html.twig
+++ b/templates/user_courses_panel/instructor.html.twig
@@ -11,7 +11,7 @@
                 <h1>All your {{categoryName}} courses</h1>
             </div>
             <div class="course-list-title-right-side">
-                <button class="btn-create"  onclick="window.location.href='{{ path('create_course') }}';">
+                <button class="btn-default"  onclick="window.location.href='{{ path('create_course') }}';">
                     <span>
                         <img src="/icons/plus.svg" alt="plus">
                         Create
