--- a/assets/styles/createcourse.css
+++ b/assets/styles/createcourse.css
@@ -8,13 +8,31 @@
     width: 60%;
 }
 
-.create-course-step-container{
+.create-course-step-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     border: solid 1px var(--navy);
     height: 70vh;
     margin-top: 2em;
+    position: relative;
+    z-index: 0;
+    border-radius: 2em;
+}
+
+.create-course-step-container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--navy);
+    opacity: 0.5;
+    backdrop-filter: blur(10px);
+    z-index: -1;
+    pointer-events: none;
+    border-radius: 2em;
 }
 
 .create-course-button-section{
@@ -32,6 +50,7 @@
     justify-content: center;
     height: 40%;
     width: 80%;
+    color: var(--lightblue);
 }
 
 .create-course-step-input{
@@ -47,3 +66,23 @@
     flex-direction: column;
 }
 
+
+.create-course-step-input input, textarea{
+    width: 90%;
+    border-radius: 0.375rem;
+    border: 2px solid var(--navy);
+    outline: 0;
+    background-color: var(--lightblue);
+    padding: 0.75rem 1rem;
+    color: var(--navy);
+    margin-bottom: 2em;
+  }
+
+  .create-course-step-input textarea{
+    min-height: 10em;
+    min-width: 30em;
+  }
+  
+  .create-course-step-input input:focus {
+    border-color: var(--brightblue);;
+  }
