--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -10,8 +10,9 @@ body {
     margin: 0;
     padding: 0;
     width: 100%; 
+    height: 100%;
     background-color: var(--white);
-    font-family:Georgia, 'Times New Roman', Times, serif
+    font-family:Georgia, 'Times New Roman', Times, serif;
 }
 
 .icon{
@@ -489,4 +490,33 @@ body {
   
 .btn-default:hover {
     background-color: var(--lightblue);
+}
+
+
+.btn-default-red {
+    border: 2px solid  var(--navy);
+    background-color: red;
+    border-radius: 0.9em;
+    cursor: pointer;
+    color: var(--white);
+    padding: 0.8em 1.2em 0.8em 1em;
+    transition: all ease-in-out 0.2s;
+    font-size: 16px;
+}
+  
+.btn-default-red span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--navy);
+    font-weight: 600;
+}
+
+.btn-default-red span img {
+    width: 15px;
+    margin-right: 20px;
+}
+  
+.btn-default-red:hover {
+    background-color:#570b0b;
 }
