--- a/assets/styles/editcourse.css
+++ b/assets/styles/editcourse.css
@@ -30,7 +30,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
     height: 100%;
 }
 
@@ -47,17 +46,34 @@
 }
 
 .edit-course-block-content{
-    /* background-color: var(--white); */
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
     border: 1px solid var(--navy);
     box-shadow: 0px 0px 51px -19px rgba(0, 0, 0, 0.199);
     width: 80%;
     min-height: 50vh;
     padding: 2em;
+    position: relative;
+    z-index: 0;
+    border-radius: 2em;
 }
+
+.edit-course-block-content::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--navy);
+    opacity: 0.2;
+    backdrop-filter: blur(10px);
+    z-index: -1;
+    pointer-events: none;
+    border-radius: 2em;
+}
+
 
 .edit-course-block-content h2{
     text-align: left;
@@ -145,8 +161,25 @@
 
   .edit-course-block-content-title{
     width: 100%;
+    position: relative;
+    top: -1em;
     border-bottom: solid 1px var(--navy);
-    margin-bottom: 2em;
+  }
+
+
+  .edit-course-chapter-element-create-form{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .chapter-create-inputs{
+    width: 100%;
+  }
+
+  .chapter-create-container{
+    width: 90%;
   }
 
 /* modals */
@@ -161,5 +194,16 @@
     width: 2em;
 }
 
+.delete-course-buttons-container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 4em;
+}
+
+.delete-course-container{
+    margin: 5em;
+}
 
 
