--- a/templates/courses/edit.html.twig
+++ b/templates/courses/edit.html.twig
@@ -8,7 +8,6 @@
     {{ form_start(course_form) }}
 
     <button class="btn-default edit-course-submit-btn"  
-            onclick="window.location.href='{{ path('create_course') }}';" 
             type="submit">
         <span>
             Save
@@ -23,7 +22,8 @@
                 <button type="button" data-action="click->edit-course#navigate" data-index="0" class="nav-button">Basic Info</button>
                 <button type="button" data-action="click->edit-course#navigate" data-index="1" class="nav-button">Pricing</button>
                 <button type="button" data-action="click->edit-course#navigate" data-index="2" class="nav-button">Curriculum</button>
-                <button type="button" data-action="click->edit-course#navigate" data-index="3" class="nav-button">Critical</button>
+                 <button type="button" data-action="click->edit-course#navigate" data-index="3" class="nav-button">Publish</button>
+                <button type="button" data-action="click->edit-course#navigate" data-index="4" class="nav-button">Critical</button>
             </div>
         </div>
 
@@ -71,11 +71,12 @@
                     </div>
                 
                     <div id="chapter-list" data-edit-course-target="chapterList" class="edit-course-chapter-list">
-
+                        {% set chapter_number =  0 %}
                         {% for chapter in course.chapters %}
                             <div class="edit-course-chapter-element">
+                                {% set chapter_number = loop.index %}
                                 <h3 class="chapter-header">
-                                    Chapter.{{ loop.index }} 
+                                    Chapter.{{ chapter_number }} 
                                     <span class="chapter-name">{{ chapter.name }}</span>
                                 </h3>
                                 {% if chapter.episodes is not empty %}
@@ -137,10 +138,43 @@
                         {% endfor %}
                     </div>
 
-                    {% include 'partials/chapter/_create.html.twig' with { courseid: course.id, chapter_form: chapter_form } %}
+                    {% include 'partials/chapter/_create.html.twig' with { courseid: course.id, chapter_form: chapter_form, chapter_number: chapter_number + 1 } %}
                     <div id="chapter-form-messages" data-edit-course-target="chapterFormMessages"></div>
                 </div>
             </div>
+
+            <!-- Publish Section -->
+            <div data-edit-course-target="section" class="edit-course-block" style="display: none;">
+                <div class="edit-course-block-content">
+                
+                    <div class="edit-course-block-content-title">
+                        <h2>Publishing a Course:</h2>
+                    </div>
+                    <p>
+                        Once you have completed and reviewed your course content,
+                        you can submit it for final review by clicking the "Send for review"
+                        button below. Our team will carefully assess your course to ensure it meets 
+                        our standards and provide feedback if any adjustments are needed.
+                        Once the review process is complete, you will receive the results via email.
+                        This ensures your course is ready to be published and available on our website.
+                    </p>
+
+                    <button class="btn-default" 
+                            type="button" 
+                            data-controller="custom-modal" 
+                            data-action="click->custom-modal#open" 
+                            data-modal-id="publish-course">
+                            
+                            <span>
+                                Send for review
+                            </span>
+                        
+                    </button>
+
+                    
+                </div>
+            </div>
+            {{ form_end(course_form) }}
 
             <!-- Critical Section -->
             <div data-edit-course-target="section" class="edit-course-block">
@@ -152,11 +186,16 @@
                     <div class="col-auto">
                         <div class="form-text">
                             
-                            <button type="button" 
+                            <button class="btn-default-red" 
+                                    type="button" 
                                     data-controller="custom-modal" 
                                     data-action="click->custom-modal#open" 
                                     data-modal-id="delete-course">
-                                Delete
+                                    
+                                    <span>
+                                        Delete
+                                    </span>
+                                
                             </button>
                             
                         </div>
@@ -185,15 +224,38 @@
 <!-- Modal Delete Course  -->
 {% component Modal with {id: 'delete-course'}  %}
     {% block modal_header %}
-        <h1>Delete course: {{course.name}}</h1>
+        <h1>Delete course</h1>
         <button type="button" class="btn-close" data-action="click->custom-modal#hide" aria-label="Close">
             <img src="/icons/remove.svg" alt="close">
         </button>
     {% endblock %}
     {% block modal_body %}
-        Are you sure you want to delete this course ?
-        <button type="button" class="btn-close" onclick="window.location.href='{{ path('delete_course', {id: course.id}) }}';">Yes</button>
-        <button type="button" class="btn-close" data-action="click->custom-modal#hide" aria-label="Close">No</button>
+        <div class="delete-course-container">
+             <h3>Are you sure you want to delete course : {{course.name}}  ?</h3>
+            <div class="delete-course-buttons-container">
+                <button type="button" class="btn-default-red"  onclick="window.location.href='{{ path('delete_course', {id: course.id}) }}';">Yes</button>
+                <button type="button" class="btn-default"  data-action="click->custom-modal#hide" aria-label="Close">No</button>
+            </div>
+        </div> 
+    {% endblock %}
+{% endcomponent %}
+
+<!-- Modal Publish Course  -->
+{% component Modal with {id: 'publish-course'}  %}
+    {% block modal_header %}
+        <h1>Publishing the course</h1>
+        <button type="button" class="btn-close" data-action="click->custom-modal#hide" aria-label="Close">
+            <img src="/icons/remove.svg" alt="close">
+        </button>
+    {% endblock %}
+    {% block modal_body %}
+        <div class="delete-course-container">
+             <h3>Are you ready to send your course for review ?</h3>
+            <div class="delete-course-buttons-container">
+                <button type="button" class="btn-default"  onclick="">Yes</button>
+                <button type="button" class="btn-default-red"  data-action="click->custom-modal#hide" aria-label="Close">No</button>
+            </div>
+        </div> 
     {% endblock %}
 {% endcomponent %}
 
