--- a/templates/courses/edit.html.twig
+++ b/templates/courses/edit.html.twig
@@ -14,7 +14,7 @@
         </span>
     </button>
 
-    <div data-controller="edit-course" class="edit-course-container" >
+    <div data-controller="edit-course" data-edit-course-initial-section="{{ initialSectionIndex }}" class="edit-course-container" >
 
         <!-- Navigation Panel -->
         <div class="edit-course-nav">
@@ -74,11 +74,38 @@
                         {% set chapter_number =  0 %}
                         {% for chapter in course.chapters %}
                             <div class="edit-course-chapter-element">
+
+                            
                                 {% set chapter_number = loop.index %}
-                                <h3 class="chapter-header">
-                                    Chapter.{{ chapter_number }} 
-                                    <span class="chapter-name">{{ chapter.name }}</span>
-                                </h3>
+                                <div class="chapter-header">
+                                    <h3>Chapter.{{ chapter_number }} </h3>
+                                    <div class="chapter-buttons">
+                                        <button class="btn-default edit-course-edit-delete-btn" 
+                                                type="button" 
+                                                data-controller="custom-modal" 
+                                                data-action="click->custom-modal#open" 
+                                                data-modal-id="edit-chapter" 
+                                                data-chapter-id="{{ chapter.id }}">
+                                            <span>
+                                                <img src="/icons/edit-white.svg" alt="edit">
+                                            </span>
+                                        </button>
+
+                                        <button class="btn-default edit-course-edit-delete-btn" 
+                                                type="button"
+                                                data-controller="custom-modal" 
+                                                data-action="click->custom-modal#open" 
+                                                data-modal-id="delete-chapter"
+                                                data-chapter-id="{{ chapter.id }}">
+                                            <span>
+                                                <img src="/icons/remove.svg" alt="remove">
+                                            </span>
+                                        </button>
+                                    </div>
+                                    <h3>{{ chapter.name }} </h3>
+                                </div>
+
+
                                 {% if chapter.episodes is not empty %}
                                     
                                     {% for episode in chapter.episodes %}
@@ -138,7 +165,7 @@
                         {% endfor %}
                     </div>
 
-                    {% include 'partials/chapter/_create.html.twig' with { courseid: course.id, chapter_form: chapter_form, chapter_number: chapter_number + 1 } %}
+                    {% include 'partials/chapter/_create.html.twig' with { courseid: course.id, chapter_form: create_chapter_form, chapter_number: chapter_number + 1 } %}
                     <div id="chapter-form-messages" data-edit-course-target="chapterFormMessages"></div>
                 </div>
             </div>
@@ -204,6 +231,36 @@
             </div>
         </div>
     </div>
+
+
+<!-- Modal Edit Chapter  -->
+{% component Modal with {id: 'edit-chapter'} %}
+    {% block modal_header %}
+        <h1>Edit chapter</h1>
+        <button type="button" class="btn-close" data-action="click->custom-modal#hide" aria-label="Close">
+            <img src="/icons/remove.svg" alt="close">
+        </button>
+    {% endblock %}
+    {% block modal_body %}
+         {% include 'partials/chapter/_edit.html.twig' with { edit_chapter_form: edit_chapter_form } %}
+    {% endblock %}
+{% endcomponent %}
+
+<!-- Modal Delete Chapter  -->
+{% component Modal with {id: 'delete-chapter'} %}
+    {% block modal_header %}
+        <h1>Delete chapter</h1>
+        <button type="button" class="btn-close" data-action="click->custom-modal#hide" aria-label="Close">
+            <img src="/icons/remove.svg" alt="close">
+        </button>
+    {% endblock %}
+    {% block modal_body %}
+        Are you sure you want to delete this chapter?
+        <button type="button" id="deleteChapterButton" aria-label="Delete Chapter">Yes</button>
+        <button type="button" class="btn-close" data-action="click->custom-modal#hide" aria-label="Close">No</button>
+    {% endblock %}
+{% endcomponent %}
+
 
 <!-- Modal Delete Episode  -->
 {% component Modal with {id: 'delete-episode'} %}
